# flucxx

./: .gitmodules  About.qml  CMakeLists.txt  LICENSE  Main.qml  Navigator.qml  README.md  TodoEditor.qml  main.cpp  qml.qrc
actions/: CMakeLists.txt  DialogActions.hpp  NavigationActions.hpp  QmlActions.hpp  TodoActions.hpp
demolib/: CMakeLists.txt
demolib/actions/: CMakeLists.txt  DialogActions.hpp  NavigationActions.hpp  QmlActions.hpp  TodoActions.hpp
demolib/middlewares/: CMakeLists.txt  DialogMiddleware.hpp  LoggingMiddleware.hpp  SleepMiddleware.hpp
demolib/models/: CMakeLists.txt  TodoItem.hpp
demolib/stores/: CMakeLists.txt  MainStore.hpp  NavigationStore.hpp
examples/: CMakeLists.txt
examples/artworks/: CMakeLists.txt  main.cpp
examples/artworks/actions/: GalleryActions.hpp  NavigationActions.hpp  QmlActions.hpp
examples/artworks/middlewares/: GalleryMiddleware.hpp
examples/artworks/models/: ArtworkModel.hpp  NavigationModel.hpp
examples/artworks/qml/: Artwork.qml  Gallery.qml  Main.qml  Navigator.qml  qml.qrc
examples/artworks/stores/: MainStore.hpp  NavigationStore.hpp
examples/calculator/: CMakeLists.txt  main.cpp
examples/calculator/actions/: CalculatorActions.hpp  QmlActions.hpp
examples/calculator/middlewares/: LoggingMiddleware.hpp
examples/calculator/qml/: Main.qml
examples/calculator/stores/: MainStore.hpp
examples/todo/: CMakeLists.txt  main.cpp
examples/todo/actions/: CMakeLists.txt  DialogActions.hpp  NavigationActions.hpp  QmlActions.hpp
examples/todo/middlewares/: CMakeLists.txt  DialogMiddleware.hpp  LoggingMiddleware.hpp  SleepMiddleware.hpp
examples/todo/models/: CMakeLists.txt  NavigationModel.hpp  TodoListModel.hpp
examples/todo/qml/: About.qml  Dialogx.qml  Main.qml  TodoEditor.qml
examples/todo/stores/: CMakeLists.txt  MainStore.hpp  NavigationStore.hpp
flucxx/: CMakeLists.txt  action.hpp  dispatcher.hpp  middleware.hpp  promise.hpp  store.hpp
middlewares/: CMakeLists.txt  DialogMiddleware.hpp  LoggingMiddleware.hpp
models/: CMakeLists.txt  TodoItem.hpp  TodoListModel.hpp
qml/: Main.qml  TodoEditor.qml
stores/: CMakeLists.txt  MainStore.hpp  NavigationStore.hpp
